# coding-everything

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Makefile  README.md  kimi-superpower  ks  pyproject.toml  skills-install.yaml
.skills/setup/: SKILL.md
codex/: README.md
docs/: 2026-04-23-skills-manager-architecture-research.md  ROADMAP.md  agent-context-loading.md  kimi-skills-architecture.md  product-manager-skills-migration-backlog.md  skill-standard.md  skills-architecture.md
docs/CODEMAPS/: INDEX.md  agents.md  cli.md  docs.md  scripts.md  skills.md
docs/plans/: 2025-02-27-dev-code-cleanup-skill.md  2025-02-27-setup-skill-refactor-design.md  2025-02-27-setup-skill-refactor.md  2025-04-02-ce-cli-interactive-init.md  2026-02-25-codex-migration.md  2026-03-20-shared-skills-directory-design.md  2026-03-20-shared-skills-directory-implementation-plan.md  2026-03-31-mcp-install-design.md  2026-03-31-mcp-install-implementation-plan.md  2026-03-31-setup-install-refactor-design.md  2026-03-31-setup-install-refactor-implementation-plan.md  (+6 more)
install_skills/: AGENTS.md  CLAUDE.md  __init__.py  cli.py  config.py  installer.py  models.py
kimi/: README.md
mcp-configs/: required.json
opencode/: README.md
scripts/: generate_codemaps.py  install.sh  install_skills.py  sync-agent-browser-skill.sh
tests/: conftest.py  test_cli_add.py  test_cli_init.py  test_cli_repo_root_repair.py  test_config.py  test_generate_codemaps.py  test_install.sh  test_install_skills.py  test_installer_v2.py  test_models.py  test_switch_updated_submodules_to_main.py
(+115 files in other folders)
